--- a/k8s/manifests/observability/elasticsearch.yaml
+++ b/k8s/manifests/observability/elasticsearch.yaml
@@ -1,10 +1,9 @@
 apiVersion: apps/v1
-kind: StatefulSet
+kind: Deployment
 metadata:
   name: elasticsearch
   namespace: monitoring
 spec:
-  serviceName: elasticsearch
   replicas: 1
   selector:
     matchLabels:
@@ -16,7 +15,7 @@ spec:
     spec:
       containers:
       - name: elasticsearch
-        image: docker.elastic.co/elasticsearch/elasticsearch:8.10.0
+        image: docker.elastic.co/elasticsearch/elasticsearch:8.11.0
         ports:
         - containerPort: 9200
         - containerPort: 9300
@@ -27,9 +26,6 @@ spec:
           value: "-Xms512m -Xmx512m"
         - name: xpack.security.enabled
           value: "false"
-        volumeMounts:
-        - name: data
-          mountPath: /usr/share/elasticsearch/data
         resources:
           requests:
             memory: "1Gi"
@@ -37,14 +33,6 @@ spec:
           limits:
             memory: "2Gi"
             cpu: "1000m"
-  volumeClaimTemplates:
-  - metadata:
-      name: data
-    spec:
-      accessModes: ["ReadWriteOnce"]
-      resources:
-        requests:
-          storage: 10Gi
 ---
 apiVersion: v1
 kind: Service
