--- a/k8s/manifests/observability/kibana.yaml
+++ b/k8s/manifests/observability/kibana.yaml
@@ -15,21 +15,25 @@ spec:
     spec:
       containers:
       - name: kibana
-        image: docker.elastic.co/kibana/kibana:8.10.0
+        image: docker.elastic.co/kibana/kibana:8.11.0
         ports:
         - containerPort: 5601
         env:
         - name: ELASTICSEARCH_HOSTS
           value: "http://elasticsearch:9200"
-        - name: ELASTICSEARCH_URL
-          value: "http://elasticsearch:9200"
         resources:
           requests:
             memory: "512Mi"
-            cpu: "500m"
+            cpu: "250m"
           limits:
             memory: "1Gi"
-            cpu: "1000m"
+            cpu: "500m"
+        readinessProbe:
+          httpGet:
+            path: /api/status
+            port: 5601
+          initialDelaySeconds: 60
+          periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
