--- a/k8s/manifests/appointment-service/deployment.yaml
+++ b/k8s/manifests/appointment-service/deployment.yaml
@@ -2,9 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: appointment-service
-  namespace: default
-  labels:
-    app: appointment-service
 spec:
   replicas: 2
   selector:
@@ -21,17 +18,17 @@ spec:
         ports:
         - containerPort: 8002
         env:
-        - name: DATABASE_URL
+        - name: SPRING_DATASOURCE_URL
           valueFrom:
             secretKeyRef:
               name: db-secrets
               key: jdbc-url
-        - name: DB_USERNAME
+        - name: SPRING_DATASOURCE_USERNAME
           valueFrom:
             secretKeyRef:
               name: db-secrets
               key: username
-        - name: DB_PASSWORD
+        - name: SPRING_DATASOURCE_PASSWORD
           valueFrom:
             secretKeyRef:
               name: db-secrets
@@ -41,56 +38,3 @@ spec:
             configMapKeyRef:
               name: kafka-config
               key: bootstrap-servers
-        resources:
-          requests:
-            memory: "512Mi"
-            cpu: "300m"
-          limits:
-            memory: "1Gi"
-            cpu: "1000m"
-        livenessProbe:
-          httpGet:
-            path: /appointments/health
-            port: 8002
-          initialDelaySeconds: 60
-          periodSeconds: 10
-        readinessProbe:
-          httpGet:
-            path: /actuator/health
-            port: 8002
-          initialDelaySeconds: 30
-          periodSeconds: 5
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: appointment-service
-  namespace: default
-spec:
-  type: ClusterIP
-  selector:
-    app: appointment-service
-  ports:
-  - protocol: TCP
-    port: 8002
-    targetPort: 8002
----
-apiVersion: autoscaling/v2
-kind: HorizontalPodAutoscaler
-metadata:
-  name: appointment-service-hpa
-  namespace: default
-spec:
-  scaleTargetRef:
-    apiVersion: apps/v1
-    kind: Deployment
-    name: appointment-service
-  minReplicas: 2
-  maxReplicas: 10
-  metrics:
-  - type: Resource
-    resource:
-      name: cpu
-      target:
-        type: Utilization
-        averageUtilization: 70
