--- a/microservices/user-service/requirements.txt
+++ b/microservices/user-service/requirements.txt
@@ -2,10 +2,10 @@ fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
 psycopg2-binary==2.9.9
-pydantic==2.5.0
+pydantic[email]==2.5.0
+passlib==1.7.4
+bcrypt==4.1.1
 python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
 kafka-python==2.0.2
 prometheus-client==0.19.0
-python-dotenv==1.0.0
+python-multipart==0.0.6
