--- a/k8s/manifests/api-gateway/deployment.yaml
+++ b/k8s/manifests/api-gateway/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: api-gateway
-        image: aarnavjp/api-gateway:latest
+        image: aarnavjp/api-gateway:v2
         ports:
         - containerPort: 3000
         env:
